app/styles/main.css
body {
	@apply bg-black text-neutral-200 font-sansserif font-light subpixel-antialiased;
}

::selection {
	background: #363636;
}

p {
	font-size: 16px;
	line-height: 1.74;
}

main h1 {
	margin-bottom: 0 !important;
}

a {
	font-weight: 400 !important;
}

code {
	@apply font-mono;
	font-weight: 400 !important;
}

code::before {
	content: none !important;
}

code::after {
	content: none !important;
}

.no-pre-margin pre {
	margin: 0;
}

.prose video {
	@apply rounded-md w-full;
}

figcaption {
	text-align: center;
}

h1 {
	@apply font-system;
}

@keyframes gradient-border {
	0% {
		border-image-source: linear-gradient(
			45deg,
			rgba(209, 209, 209, 1),
			rgba(153, 153, 153, 1),
			rgba(77, 77, 77, 1),
			rgba(0, 0, 0, 1)
		);
	}
	50% {
		border-image-source: linear-gradient(
			45deg,
			rgba(153, 153, 153, 1),
			rgba(77, 77, 77, 1),
			rgba(0, 0, 0, 1),
			rgba(209, 209, 209, 1)
		);
	}
	100% {
		border-image-source: linear-gradient(
			45deg,
			rgba(77, 77, 77, 1),
			rgba(0, 0, 0, 1),
			rgba(209, 209, 209, 1),
			rgba(153, 153, 153, 1)
		);
	}
}

@media (min-width: 768px) {
	.border-gradient-animated {
		border-style: solid;
		border-width: 1px;
		border-image: linear-gradient(
				45deg,
				rgba(209, 209, 209, 1),
				rgba(153, 153, 153, 1),
				rgba(77, 77, 77, 1),
				rgba(0, 0, 0, 1)
			)
			1;
		animation: gradient-border 8s ease-in-out infinite alternate forwards;
	}
}

